cloudmon/kustomize/metrics_processor/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-processor
  labels:
    app.kubernetes.io/app: metrics-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: metrics-processor
  template:
    metadata:
      labels:
        app.kubernetes.io/app: metrics-processor
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: "convertor"
          command: ["cloudmon-metrics-convertor"]
          image: "quay.io/stackmon/metrics-processor"
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: "api"
              containerPort: 3005

          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              cpu: "100m"
              memory: "200Mi"
          readinessProbe:
            httpGet:
              path: "/api/v1"
              port: "api"
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: "/api/v1"
              port: "api"
            initialDelaySeconds: 20
            periodSeconds: 30
          volumeMounts:
            - name: "instance-config"
              mountPath: "/cloudmon/config.yaml"
              readOnly: true
              subPath: "config.yaml"
            - name: "instance-confd"
              mountPath: "/cloudmon/conf.d"
              readOnly: true
        - name: "reporter"
          command: ["cloudmon-metrics-reporter"]

          image: "quay.io/stackmon/metrics-processor"
          imagePullPolicy: "IfNotPresent"

          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              cpu: "100m"
              memory: "200Mi"
          volumeMounts:
            - name: "instance-config"
              mountPath: "/cloudmon/config.yaml"
              readOnly: true
              subPath: "config.yaml"
            - name: "instance-confd"
              mountPath: "/cloudmon/conf.d"
              readOnly: true

      volumes:
        - name: "instance-config"
          configMap:
            name: "metrics-processor-config"
        - name: "instance-confd"
          configMap:
            name: "metrics-processor-confd"
  revisionHistoryLimit: 2
