cloudmon/kustomize/metrics_processor/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-processor
  labels:
    app.kubernetes.io/app: metrics-processor
spec:
  selector:
    app.kubernetes.io/app: metrics-processor
  ports:
    - name: "api"
      port: 80
      targetPort: 3005
